# scrobits-ai-poc-mirems

POC/Pinecone/: PineconeDB.ipynb
POC/Query-Agent/: .gitignore  README.md  pyproject.toml  settings.py
POC/Query-Agent/src/Uploader/: upload_api.py  uploader_pinecone.py
POC/Query-Agent/src/agents/: multi_agent_guardrails.py  multi_agent_llm(deprecated).py  multi_agent_vertex.py  multi_agent_workflow_old.py  multiagent_test1.py  retriver_agent.py
POC/Query-Agent/src/document_loader/: local_loader.py  prompt.txt  prompt2.txt  web_scraper.py
POC/Query-Agent/src/main/: main.py  supervisor.py
POC/Query-Agent/src/schemas/: evaluation_schema.py
POC/Query-Agent/src/tools/: query_tool.py
POC/Query-Agent/src/utils/: mermaid_graph_generator.py  prompts.yml  yaml_loader.py
media-monitoring-knowledge-assitant/: .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
media-monitoring-knowledge-assitant/src/config/: api_settings.py  settings.py
media-monitoring-knowledge-assitant/src/core/base/: singletone.py
media-monitoring-knowledge-assitant/src/main/: main.py  models.py
media-monitoring-knowledge-assitant/src/pinecone-agent/: manage.py  retriver_agent.py  start_api.py  test_api.py  test_retrieval_agent.py
media-monitoring-knowledge-assitant/src/vector_store/: vectorstore_singletone.py
media-monitoring-knowledge-assitant/src/vector_store/document_strategies/: base.py  local_documents_loader.py
media-monitoring-knowledge-assitant/src/vector_store/vector_index_strategies/: astradb_vector_index.py  base.py
